<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_app_protection__app_access">

        <org.btider.dediapp.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_android_screen_lock"
            android:summary="@string/preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint"
            android:title="@string/preferences_app_protection__screen_lock" />

        <Preference
            android:dependency="pref_android_screen_lock"
            android:key="pref_android_screen_lock_timeout"
            android:title="@string/preferences_app_protection__screen_lock_inactivity_timeout" />

        <org.btider.dediapp.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_enable_passphrase_temporary"
            android:summary="@string/preferences__lock_signal_and_message_notifications_with_a_passphrase"
            android:title="@string/preferences__enable_passphrase" />

        <Preference
            android:dependency="pref_enable_passphrase_temporary"
            android:key="pref_change_passphrase"
            android:summary="@string/preferences__change_your_passphrase"
            android:title="@string/preferences__change_passphrase" />

        <org.btider.dediapp.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="pref_enable_passphrase_temporary"
            android:key="pref_timeout_passphrase"
            android:summary="@string/preferences__auto_lock_signal_after_a_specified_time_interval_of_inactivity"
            android:title="@string/preferences__inactivity_timeout_passphrase" />

        <Preference
            android:layout_height="wrap_content"
            android:dependency="pref_timeout_passphrase"
            android:key="pref_timeout_interval"
            android:title="@string/preferences__inactivity_timeout_interval" />

        <org.btider.dediapp.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_screen_security"
            android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots"
            android:title="@string/preferences__screen_security" />

        <org.btider.dediapp.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_incognito_keyboard"
            android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"
            android:title="@string/preferences__incognito_keyboard" />
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_app_protection__communication">

        <!--<org.btider.dediapp.components.SwitchPreferenceCompat-->
                <!--android:defaultValue="false"-->
                <!--android:key="pref_turn_only"-->
                <!--android:title="@string/preferences_advanced__always_relay_calls"-->
                <!--android:summary="@string/preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address"/>-->

        <org.btider.dediapp.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_read_receipts"
                android:title="@string/preferences__read_receipts"
                android:summary="@string/preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts"/>

        <Preference android:key="preference_category_blocked"
                    android:title="@string/preferences_app_protection__blocked_contacts" />
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_app_protection__registration_lock">
        <org.btider.dediapp.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_registration_lock"
                android:title="@string/preferences_app_protection__registration_lock_pin"
                android:summary="@string/preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required"/>
    </PreferenceCategory>


</PreferenceScreen>
